# cut-cp

./: .gitignore  BARTULA_JAN_PW_LAB1.docx  BARTULA_JAN_PW_LAB2.docx  BARTULA_JAN_PW_LAB3.docx  BARTULA_JAN_PW_LAB4.docx  BARTULA_JAN_PW_LAB5.docx  BARTULA_JAN_PW_LAB6.docx  BARTULA_JAN_PW_LAB6.xlsx  BARTULA_JAN_PW_LAB7.docx  BARTULA_JAN_PW_LAB7_fibonacci.xlsx  BARTULA_JAN_PW_LAB7_vector.xlsx  CMakeLists.txt  README.md
lab1/: CMakeLists.txt  Makefile  moj_program.c
lab2/: CMakeLists.txt  Makefile  clone.c  fork.c  program.c
lab3/: CMakeLists.txt  zad1.c  zad2.cpp
lab4/: CMakeLists.txt  zad1.cpp
lab5/: CMakeLists.txt  zad2.cpp  zad3.cpp  zad4.cpp  zad5.cpp  zad6.cpp
lab6/: CMakeLists.txt  matrix.cpp  matrix.h  zad1.cpp
lab7/: CMakeLists.txt  csv.h  zad1.cpp
lab7/fib/: zad2.cpp
lab7/simd/: zad1.cpp
lab8/: pom.xml
lab8/src/main/java/: Exercise1.java  Exercise2.java  Exercise3.java
